--- a/src/templates/sign-in.html
+++ b/src/templates/sign-in.html
@@ -1,17 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>sign in</title>
-    </head>
-    <body>
-        <h1>sign in</h1>
-        <form method="post">
-            <input type="text" placeholder="username" name="username" />
-            <input type="text" placeholder="password" name="password" />
-            <button>submit</button>
-        </form>
-        <!-- error message -->
-    </body>
-</html>
+<main>
+    <h1>sign in</h1>
+    <form method="post">
+        <input type="text" placeholder="username" name="username" required />
+        <input type="password" placeholder="password" name="password" required />
+        <button>submit</button>
+    </form>
+    <!-- error message -->
+</main>
