--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -12,6 +12,7 @@
 <body>
     <nav>
         <a href="/sign-in">sign in</a>
+        <a href="/github-sign-in">sign in with github</a>
         <a href="/sign-up">sign up</a>
         <form action="/logout" method="post">
             <button>logout</button>
