signup sessions instead of sending access token

--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title><!-- title --></title>
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        <!-- title -->
-    </title>
-</head>
-
-<body>
-    <nav>
-        <a href="/sign-in">sign in</a>
-        <a href="/github-sign-in">sign in with github</a>
-        <a href="/sign-up">sign up</a>
-        <form action="/logout" method="post">
-            <button>logout</button>
-        </form>
-    </nav>
-    <!-- slot -->
-</body>
-
+    <body>
+        <nav>
+            <a href="/">home</a>
+            <a href="/sign-in">sign in</a>
+            <a href="/github-sign-in">sign in with github</a>
+            <a href="/sign-up">sign up</a>
+            <form action="/logout" method="post">
+                <button>logout</button>
+            </form>
+        </nav>
+        <!-- slot -->
+    </body>
 </html>
