--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,4 +1,5 @@
-<main>
-    <h1>home</h1>
-    <!-- message -->
+<main class="flex items-center justify-center">
+    <div class="space-y-4 mt-32 text-lg">
+        <!-- message -->
+    </div>
 </main>
