--- a/src/templates/choose-username.html
+++ b/src/templates/choose-username.html
@@ -1,8 +1,20 @@
-<main>
-    <h1>choose a username</h1>
-    <form method="post">
-        <input type="text" placeholder="username" name="username" required />
-        <button>submit</button>
-    </form>
-    <!-- error message -->
+<main class="flex items-center justify-center">
+    <div class="space-y-4 mt-32">
+        <h1 class="text-lg">choose a username</h1>
+        <form method="post" class="space-y-4">
+            <input
+                type="text"
+                placeholder="username"
+                name="username"
+                required
+                class="rounded-md border bg-zinc-950 placeholder:text-border-neutral-800 block px-3 py-2"
+            />
+            <button class="bg-white text-zinc-950 w-full rounded-md py-2">
+                create account
+            </button>
+        </form>
+        <div class="text-red-400">
+            <!-- error message -->
+        </div>
+    </div>
 </main>
